refactor: replace video module with campaign module
